--- a/css/style.css
+++ b/css/style.css
@@ -2,9 +2,50 @@
 @import url('https://fonts.googleapis.com/css?family=Poiret+One');
 
 * {
-	margin:0px;
-	padding:0px;
+	margin: 0px;
+	padding: 0px;
 }
+body {
+	width: 100%;
+	height: 100vh;
+	overflow: hidden;
+	background: #b1e1e2;
+}
+section {
+	width: 1000px;
+	height: 400px;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	margin-top: -200px;
+	margin-left: -500px;
+	border: 1px solid red;
+}
+section .sky {
+	width: 100%;
+	height: 100%;
+	position: absolute; 
+	top: 0px;
+	left: 0px;
+}
+section .sky .sun {
+	position: absolute;
+	left: 50%;
+	margin-left: -100px;
+	top: -150px;
+	transform-origin: center 500px;
+}
+section .sky .cloud1 {
+	position: absolute;
+	top: -30px;
+	left: 10%;
+}
+section .sky .cloud2 {
+	position: absolute;
+	top: 20px;
+	left: 0%;
+}
+
 
 
 
